--- a/TicTacToe/Images.qrc
+++ b/TicTacToe/Images.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>image.png</file>
         <file>X.png</file>
+        <file>../../Title.png</file>
     </qresource>
 </RCC>
