--- a/TicTacToe/mainwindow.ui
+++ b/TicTacToe/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -37,7 +37,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -50,7 +50,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
@@ -63,7 +63,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
@@ -76,7 +76,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
@@ -89,7 +89,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
@@ -102,7 +102,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
@@ -115,7 +115,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
@@ -128,7 +128,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="Line" name="line">
@@ -210,6 +210,9 @@
       <height>16</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>1</string>
     </property>
@@ -222,6 +225,9 @@
       <width>58</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
     </property>
     <property name="text">
      <string>2</string>
@@ -236,6 +242,9 @@
       <height>16</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>3</string>
     </property>
@@ -248,6 +257,9 @@
       <width>58</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
     </property>
     <property name="text">
      <string>4</string>
@@ -262,6 +274,9 @@
       <height>16</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>5</string>
     </property>
@@ -274,6 +289,9 @@
       <width>58</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
     </property>
     <property name="text">
      <string>6</string>
@@ -288,6 +306,9 @@
       <height>16</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>7</string>
     </property>
@@ -300,6 +321,9 @@
       <width>58</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
     </property>
     <property name="text">
      <string>8</string>
@@ -314,6 +338,9 @@
       <height>16</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>9</string>
     </property>
@@ -326,6 +353,9 @@
       <width>71</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
     </property>
     <property name="text">
      <string>1</string>
@@ -340,6 +370,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>2</string>
     </property>
@@ -352,6 +385,9 @@
       <width>71</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
     </property>
     <property name="text">
      <string>3</string>
@@ -366,6 +402,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>4</string>
     </property>
@@ -378,6 +417,10 @@
       <width>71</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold
+;</string>
     </property>
     <property name="text">
      <string>5</string>
@@ -392,6 +435,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>6</string>
     </property>
@@ -404,6 +450,9 @@
       <width>71</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
     </property>
     <property name="text">
      <string>7</string>
@@ -418,6 +467,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>8</string>
     </property>
@@ -431,6 +483,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;</string>
+    </property>
     <property name="text">
      <string>9</string>
     </property>
@@ -440,8 +495,8 @@
      <rect>
       <x>150</x>
       <y>200</y>
-      <width>31</width>
-      <height>16</height>
+      <width>32</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -451,27 +506,18 @@
    <widget class="QPushButton" name="start_game">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>30</y>
-      <width>291</width>
+      <x>90</x>
+      <y>40</y>
+      <width>191</width>
       <height>61</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">
+font: 75 18pt &quot;Chalkboard SE&quot;;</string>
+    </property>
     <property name="text">
      <string>Start!</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="turn">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>200</y>
-      <width>91</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Click on Start</string>
     </property>
    </widget>
    <widget class="QWidget" name="layoutWidget">
@@ -529,14 +575,47 @@
    <widget class="QLabel" name="winner">
     <property name="geometry">
      <rect>
-      <x>270</x>
+      <x>210</x>
       <y>450</y>
-      <width>331</width>
+      <width>511</width>
       <height>51</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color:red;
+font: 24pt &quot;Arial&quot;;</string>
+    </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="turn">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>200</y>
+      <width>132</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 13pt &quot;Chalkboard SE&quot;;</string>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Click on Start&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_23">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>20</y>
+      <width>461</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
